# divide-and-conquer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: divideandconquer.h  simplepool.h  workstealingpool.h
